plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

var main_class = "io.stack_community.github.stack_java.Stack"

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit test framework.
    testImplementation libs.junit

    // This dependency is used by the application.
    implementation libs.guava
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = "${main_class}"
}

jar {
    manifest {
        attributes 'Main-Class': "${main_class}"
    }
}